latest prep notes