@@ -209,6 +209,84 @@ An interviewer wants to see that you understand the *impact* of GC on applicatio
     -   **CMS (Concurrent Mark Sweep):** The first collector to focus on **low latency**. It does most of its work concurrently with the application threads to minimize STW pauses.
         -   **Trade-off:** It can suffer from heap fragmentation and has a complex tuning process. It's now deprecated in favor of G1.
     -   **G1 (Garbage-First):** The default collector in modern Java. It's a balance between throughput and low latency. It divides the heap into many small regions and intelligently chooses to collect the regions with the most garbage first (hence the name). This allows it to meet a user-defined pause time goal (`-XX:MaxGCPauseMillis`) with high probability.
-    -   **ZGC / Shenandoah:** The state-of-the-art. These are ultra-low-latency collectors designed for massive heaps (multi-terabyte) and applications that require pauses of less than a millisecond. They do almost all work concurrently. Mentioning these shows you are up-to-date with the latest JVM developments. Default Status: ZGC is not the default , needs to enable-XX:+UseZGC
+    -   **ZGC / Shenandoah:** The state-of-the-art. These are ultra-low-latency collectors designed for massive heaps (multi-terabyte) and applications that require pauses of less than a millisecond. They do almost all work concurrently. Mentioning these shows you are up-to-date with the latest JVM developments.
 
 *   **Key Takeaway:** The evolution of garbage collectors in Java is a story of moving from a focus on pure throughput to a focus on minimizing application pause times to meet the demands of modern low-latency, interactive services.
+
+---
+### Java Memory Model (JMM)
+
+**The Standard Answer:** The JMM defines how threads interact with memory. The heap is shared, and each thread has its own stack.
+
+**The Deeper, Interview-Level Answer:**
+
+This is a common point of confusion. An interviewer wants to know that you can distinguish between the **JVM Memory Structure** and the **Java Memory Model (JMM)**.
+
+*   **JVM Memory Structure (The "Where"):** This is about the physical layout of memory in the JVM.
+    -   **Heap:** Shared by all threads. This is where objects live.
+    -   **Stack:** Each thread gets its own private stack. This is where local variables and method call information live.
+    -   This structure is what most people mean when they talk about Java memory.
+
+*   **Java Memory Model (The "When" and "How"):** The JMM is an abstract specification. It's not about physical areas; it's a set of rules that defines the **guarantees of visibility and ordering** for operations in a multi-threaded context. It answers the question: "If one thread writes to a shared variable, when is that change guaranteed to be visible to other threads?"
+
+    -   **The Problem:** For performance, a thread might keep a copy of a shared variable in its own CPU cache. If Thread A modifies its cached copy, Thread B might still be seeing an old, stale value from its own cache.
+    -   **The JMM's Solution:** The JMM defines a "happens-before" relationship. If one action "happens-before" another, the results of the first action are guaranteed to be visible to the second. The two most important ways to establish a happens-before relationship are:
+        1.  **`synchronized` blocks:** When a thread exits a `synchronized` block (unlocks a monitor), it creates a happens-before relationship with any subsequent thread that enters a `synchronized` block on the *same monitor*. This forces a flush of the thread's cache to main memory.
+        2.  **`volatile` variables:** A write to a `volatile` variable happens-before every subsequent read of that same variable. This forces reads and writes to go directly to main memory, bypassing the CPU cache, ensuring visibility.
+
+*   **How to Answer:** "A common misconception is to confuse the JVM's memory areas like the heap and stack with the Java Memory Model. The JMM is actually a specification that governs thread communication. It defines the 'happens-before' rules that ensure memory writes by one thread are visible to others. We enforce these rules primarily through synchronization and the `volatile` keyword, which guarantee that changes are flushed to main memory and not just stuck in a thread's local cache."
+
+---
+
+### Class Loader
+
+**The Standard Answer:** It loads classes. There's a hierarchy: Bootstrap, Platform, and System.
+
+**The Deeper, Interview-Level Answer:**
+
+The key principles to highlight are **Delegation, Uniqueness, and Visibility**.
+
+*   **The Delegation Model (in detail):**
+    -   When a class loader is asked to load a class (e.g., `com.mycompany.MyClass`), it does **not** try to load it itself first.
+    -   Instead, it first **delegates the request to its parent class loader**.
+    -   The parent then delegates to *its* parent, and so on, all the way up to the Bootstrap Class Loader.
+    -   A class loader will only attempt to load the class itself if its parent **fails** to find it.
+
+*   **Why is this model so important?**
+    1.  **Uniqueness Guarantee:** This model ensures that a class is loaded exactly once. Since the request always goes up to the top first, the class loader that first finds and loads the class becomes the definitive one for all child loaders. This prevents the chaos of having multiple, incompatible versions of the same class loaded in the JVM.
+    2.  **Security:** The delegation model protects core Java classes from being replaced. A malicious class named `java.lang.String` on your classpath cannot be loaded because the request will go up to the Bootstrap Class Loader, which will find and load the *real* `java.lang.String` first. Your malicious version will never even be considered.
+
+*   **How to Answer:** "The Java Class Loader system is built on three key principles: delegation, uniqueness, and visibility. The most important is the **delegation model**. When loading a class, a loader first asks its parent to find it, and this goes all the way up to the Bootstrap loader. It only tries to load the class itself if the entire parent chain fails. This is critical for two reasons: it guarantees **uniqueness**, preventing the same class from being loaded multiple times, and it provides **security**, by preventing malicious code on the classpath from replacing core Java classes like `java.lang.String`."
+
+---
+
+===================================================================================
+## 4. Java 8+ Features
+===================================================================================
+
+### `Optional`
+
+**The Standard Answer:** It's a container to avoid `NullPointerException`.
+
+**The Deeper, Interview-Level Answer:**
+
+`Optional` is not just about avoiding NPEs; it's about designing **clearer, more expressive APIs**. Its primary purpose is to signal at the method signature level that a value **may be absent**.
+
+*   **The Problem with `null`:** When a method returns `null`, it's ambiguous. Does `null` mean "I didn't find anything," or does it mean "An error occurred"? The only way to know is to read the documentation (if it exists). The caller has no choice but to defensively check for `null` everywhere, leading to cluttered code.
+
+*   **How `Optional` Solves This:**
+    -   When a method signature is `public Optional<User> findUser(String id)`, it is an explicit, self-documenting contract that the `User` might not be found.
+    -   It forces the caller to actively deal with the "not found" case by "unwrapping" the `Optional`. This prevents the lazy mistake of forgetting a null check.
+
+*   **How to Use It Correctly (and Incorrectly):**
+    -   **DO** use it as a return type for methods that might not find a result.
+    -   **DO NOT** use it for class fields or method parameters. It's not a general-purpose `null` replacement. For fields, if a value can be absent, that's part of your object's state and should be modeled properly. For parameters, you can use method overloading or just rely on a `@NonNull` annotation.
+    -   **AVOID `.get()`:** Calling `optional.get()` without first checking `optional.isPresent()` is no better than a `NullPointerException`. It defeats the purpose of `Optional`.
+    -   **PREFER functional methods:** The real power of `Optional` comes from its combinator methods:
+        -   `map()`: To transform the value if it's present.
+        -   `filter()`: To keep the value only if it matches a condition.
+        -   `orElse(defaultValue)`: To safely provide a default value.
+        -   `orElseThrow(() -> new NotFoundException())`: To convert an empty `Optional` into a specific exception.
+        -   `ifPresent(value -> ...)`: To perform an action only if a value is present.
+
+*   **How to Answer:** "`Optional`'s main benefit isn't just preventing `NullPointerException`; it's about creating explicit API contracts. When a method returns an `Optional`, it clearly communicates that the value may be absent, forcing the caller to handle that case. The best way to use it is to leverage its functional methods like `map`, `filter`, and `orElse` to build fluent, readable pipelines, and to avoid calling `.get()` directly, which defeats its safety purpose."
